--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "prettier": "2.7.1",
     "svelte": "^3.44.0",
     "vite": "^2.9.9"
+  },
+  "dependencies": {
+    "three": "^0.142.0"
   }
 }
