--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
     "eslint-config-prettier": "^8.5.0",
+    "lil-gui": "^0.17.0",
     "prettier": "2.7.1",
     "svelte": "^3.44.0",
     "vite": "^2.9.9"
